[package]
name = "lecture9"
version = "0.1.0"
authors = ["Caleb Stanford <caleb.pirsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
nix = "0.20.0"
libc = "0.2.92"
structopt = "0.3.21"
rand = "0.8.3"
cfg-if = "1.0.0"
lazy_static = "1.4.0"
rayon = "1.5.0"
reqwest = { version = "0.11.0", features = ["blocking"] }
